--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<main>
 		<div class="card">
-			<p id="heading2">Card Business</p>
+			<p id="heading2">Kartu Bisnis Anime Asik</p>
 			<p id="paragraf">Selamat Kartu Anda Jadi</p>
 			<div class="col">
 				<div class="card-content">
