--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <header>
 	<h1 id="heading1">Ini adalah tampilan sederhana dengan html dan css</h1>
-	<p id="heading1">Cuma ngetest apakah saya masih ingat dengan kode nya</p>
+	<p id="heading1">Cuma ngetest apakah saya masih ingat dengan kode nya {Pull} </p>
 </header>
 <body>
 	<main>
