--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <header>
 	<h1 id="heading1">Ini adalah tampilan sederhana dengan html dan css</h1>
-	<p id="heading1">Cuma ngetest apakah saya masih ingat dengan kode nya {Pull} </p>
+	<p id="heading1">Cuma ngetest apakah saya masih ingat dengan kode nya</p>
 </header>
 <body>
 	<main>
@@ -15,7 +15,7 @@
 			<div class="col">
 				<div class="card-content">
 					<div class="images">
-						<img src="PP.png" alt="fotokartu" style="width: 150px; height: 150px; border-radius: 20px; border-color: white; border-width: 2px; border-style: solid; margin-top: 20px;">
+						<img src="images/PP.png" alt="fotokartu" style="width: 150px; height: 150px; border-radius: 20px; border-color: white; border-width: 2px; border-style: solid; margin-top: 20px;">
 						<p class="card-name">Maulana Ahsan</p>
 						<p class="job">Content Creator</p>
 					</div>
